--- a/README.qmd
+++ b/README.qmd
@@ -7,8 +7,15 @@ toc-depth: 4
 toc: true
 ---
 
-savvi is a package for Safe Anytime Valid Inference [@ramdas2023gametheoretic].
-Also, it's a savvy pun.
+savvi is a package for Safe Anytime Valid Inference. Also, it's a savvy pun.
+
+From @ramdas2023gametheoretic:
+
+> Safe anytime-valid inference (SAVI) provides measures of statistical evidence
+> and certainty -- e-processes for testing and confidence sequences for estimation
+> -- that remain valid at all stopping times, accommodating continuous monitoring
+> and analysis of accumulating data and optional stopping or continuation for
+> any reason.
 
 ## Install
 
