--- a/examples/Multinomial.qmd
+++ b/examples/Multinomial.qmd
@@ -30,7 +30,7 @@ jupyter_black.load(lab=False)
 
 _Application: sample ratio mismatch._
 
-Consider a new experimental unit $n$ is assigned to one of $i \in \{1, 2, 3\}$ groups. Therefore, groups are $\mathrm{Multinomial}(1, \mathbf{\theta})$ distributed, with $\mathbf{\theta} = [0.1, 0.3, 0.6]$.
+Consider a new experimental unit $n$ is assigned to one of $i \in \{1, 2, 3\}$ groups with probabilities $\mathbf{\theta} = [0.1, 0.3, 0.6]$. Therefore, groups are $\mathrm{Multinomial}(1, \mathbf{\theta})$ distributed.
 
 ```{python}
 #| label: multi-data
@@ -164,7 +164,7 @@ _Application: conversion rate optimization when all groups share a common multip
 Suppose a new experimental unit $n$ is randomly assigned to one of $i \in \{1, 2, 3\}$ experiment treatment groups at time $t$, with assignment probabilities $\mathbf{\rho} = [0.1, 0.3, 0.6]$, and a Bernoulli outcome is observed with probability $p_i(t) = \exp(\mu(t) + \delta_{i})$, $\mathbf{\delta} = [\log 0.2, \log 0.3, \log 0.4]$. The conditional probability that the next Bernoulli success comes from group $i$ is
 
 $$
-\theta_i = \frac{\rho_i \exp(\theta_i)}{\sum_{j=1}^d \rho_j \exp(\theta_j)}.
+\theta_i = \frac{\rho_i \exp(\delta_i)}{\sum_{j=1}^d \rho_j \exp(\delta_j)}.
 $$
 
 Therefore, the next Bernoulli success comes from a random group, $\mathrm{Multinomial}(1, \mathbf{\theta})$ distributed, with $\mathbf{\theta} \approx [0.05, 0.25, 0.68]$.
@@ -246,7 +246,7 @@ _Application: software canary testing when all processes share a common multipli
 Consider points are observed from one of $i \in \{1, 2\}$ Poisson point processes with intensity functions $\lambda_i(t) = \rho_i \exp(\delta_i) \lambda(t)$, with $\rho = [0.8, 0.2]$ and $\delta = [1.5, 2]$. The probability that the next point comes from process $i$ is
 
 $$
-\theta_i = \frac{\rho_i \exp(\theta_i)}{\sum_{j=1}^d \rho_j \exp(\theta_j)}.
+\theta_i = \frac{\rho_i \exp(\delta_i)}{\sum_{j=1}^d \rho_j \exp(\delta_j)}.
 $$
 
 Therefore, the next point comes from a random process, distributed as $\mathrm{Multinomial}(1, \mathbf{\theta})$, with $\mathbf{\theta} \approx [0.7, 0.3]$.
@@ -277,7 +277,7 @@ using a Multinomial test with $\mathbf{\theta}_0 = \mathbf{\rho}$:
 test = Multinomial(u, rho)
 ```
 
-We can also set contrast weights $[-1, 1]$ to estimate confidence sequences for $\theta_1 - \theta_0$ at a significance level $u$:
+We can also set contrast weights $[-1, 1]$ to estimate confidence sequences for $\delta_1 - \delta_0$ at a significance level $u$:
 
 ```{python}
 #| label: pois-weights
