feat: quartodoc website

--- a/references.bib
+++ b/references.bib
@@ -16,3 +16,13 @@
 	archivePrefix={arXiv},
 	primaryClass={id='math.ST' full_name='Statistics Theory' is_active=True alt_name='stat.TH' in_archive='math' is_general=False description='Applied, computational and theoretical statistics: e.g. statistical inference, regression, time series, multivariate analysis, data analysis, Markov chain Monte Carlo, design of experiments, case studies'}
 }
+@misc{
+	lindon2024anytimevalidlinearmodelsregression,
+	title={Anytime-Valid Linear Models and Regression Adjusted Causal Inference in Randomized Experiments}, 
+	author={Michael Lindon and Dae Woong Ham and Martin Tingley and Iavor Bojinov},
+	year={2024},
+	eprint={2210.08589},
+	archivePrefix={arXiv},
+	primaryClass={stat.ME},
+	url={https://arxiv.org/abs/2210.08589}, 
+}
