--- a/reference/index.qmd
+++ b/reference/index.qmd
@@ -17,5 +17,5 @@
 | | |
 | --- | --- |
 | [Multinomial](Multinomial.qmd#savvi.multinomial.Multinomial) | Sample ratio mismatch test from @lindon2022anytimevalid. |
-| [InhomogeneousBernoulliProcess](InhomogeneousBernoulliProcess.qmd#savvi.multinomial.InhomogeneousBernoulliProcess) | Conversion rate optimization test from @lindon2022anytimevalid. |
+| [InhomogeneousBernoulliProcess](InhomogeneousBernoulliProcess.qmd#savvi.multinomial.InhomogeneousBernoulliProcess) | Rate optimization test from @lindon2022anytimevalid. |
 | [InhomogeneousPoissonProcess](InhomogeneousPoissonProcess.qmd#savvi.multinomial.InhomogeneousPoissonProcess) | Canary software release test from @lindon2022anytimevalid. |
