--- a/README.qmd
+++ b/README.qmd
@@ -1,35 +1,5 @@
 ---
-title: savvi
 format: gfm
-bibliography: references.bib
-link-citations: true
-toc-depth: 4
-toc: true
 ---
 
-savvi is a package for Safe Anytime Valid Inference. Also, it's a savvy pun.
-
-From @ramdas2023gametheoretic:
-
-> Safe anytime-valid inference (SAVI) provides measures of statistical evidence
-> and certainty -- e-processes for testing and confidence sequences for estimation
-> -- that remain valid at all stopping times, accommodating continuous monitoring
-> and analysis of accumulating data and optional stopping or continuation for
-> any reason.
-
-## Install
-
-```shell
-pip install git+https://github.com/assuncaolfi/savvi
-```
-
-For development, use [pdm](https://github.com/pdm-project/pdm).
-
-## Examples
-
-{{< include examples/Multinomial.qmd >}}
-
-# References
-
-::: {#refs}
-:::
+{{< include index.qmd >}}
