--- a/index.qmd
+++ b/index.qmd
@@ -1,24 +1,10 @@
 ---
 title: savvi
-format:
-  gfm:
-    output-file: README.md
-  html: default
 ---
-
-<!-- badges: start -->
-[![Quarto Publish](https://github.com/assuncaolfi/savvi/actions/workflows/publish.yml/badge.svg)](https://github.com/assuncaolfi/savvi/actions/workflows/publish.yml)
-<!-- badges: end -->
 
 savvi is a package for Safe Anytime Valid Inference. Also, it's a savvy pun.
 
-From @ramdas2023gametheoretic:
-
-> Safe anytime-valid inference (SAVI) provides measures of statistical evidence
-> and certainty -- e-processes for testing and confidence sequences for estimation
-> -- that remain valid at all stopping times, accommodating continuous monitoring
-> and analysis of accumulating data and optional stopping or continuation for
-> any reason.
+Read the [docs](https://assuncaolfi.github.io/savvi/) for more.
 
 ## Install
 
@@ -33,9 +19,3 @@ Development version:
 ```shell
 pip install git+https://github.com/assuncaolfi/savvi
 ```
-
-For development, use [pdm](https://github.com/pdm-project/pdm).
-
-## Get started
-
-See the [example gallery](https://assuncaolfi.github.io/savvi/examples/).
