--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,13 @@ title: savvi
 
 savvi is a package for Safe Anytime Valid Inference. Also, it's a savvy pun.
 
-Read the [docs](https://assuncaolfi.github.io/savvi/) for more.
+From @ramdas2023gametheoretic:
+
+> Safe anytime-valid inference (SAVI) provides measures of statistical evidence
+> and certainty -- e-processes for testing and confidence sequences for estimation
+> -- that remain valid at all stopping times, accommodating continuous monitoring
+> and analysis of accumulating data and optional stopping or continuation for
+> any reason.
 
 ## Install
 
@@ -19,3 +25,9 @@ Development version:
 ```shell
 pip install git+https://github.com/assuncaolfi/savvi
 ```
+
+For development, use [pdm](https://github.com/pdm-project/pdm).
+
+## Get started
+
+See the [example gallery](https://assuncaolfi.github.io/savvi/examples/).
